Stop chat input jumping up and down during loading

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13114,7 +13114,7 @@ a:visited {
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  height: 80%;
+  height: 100%;
   justify-content: center;
   overflow-y: auto;
   padding: 1rem 0;
