--- a/resources/sass/chat-loading.scss
+++ b/resources/sass/chat-loading.scss
@@ -7,7 +7,7 @@ $path-length: 157px;
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  height: 80%;
+  height: 100%;
   justify-content: center;
   overflow-y: auto;
   padding: $spacer 0;
